# qwerty-backend

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  init.sql  pyproject.toml
data/: contacts.xlsx
gov_spb/: Аккредитация СМИ - Официальный сайт Администрации Санкт‑Петербурга.txt  Законодательное Собрание Санкт‑Петербурга - Официальный сайт Администрации Санкт‑Петербурга.txt  Заседание Правительства Санкт‑Петербурга 24.09.2024 - Официальный сайт Администрации Санкт‑Петербурга.txt  Мировые судьи Санкт‑Петербурга - Официальный сайт Администрации Санкт‑Петербурга.txt  Морской совет при Правительстве Санкт‑Петербурга - Официальный сайт Администрации Санкт‑Петербурга.txt  Обращения граждан - Официальный сайт Администрации Санкт‑Петербурга.txt  Общественная палата Санкт‑Петербурга - Официальный сайт Администрации Санкт‑Петербурга.txt  Символика - Официальный сайт Администрации Санкт‑Петербурга.txt  Уполномоченный по защите прав предпринимателей в Санкт‑Петербурге - Официальный сайт Администрации Санкт‑Петербурга.txt  Уполномоченный по правам ребенка в Санкт‑Петербурге - Официальный сайт Администрации Санкт‑Петербурга.txt  Уполномоченный по правам человека в Санкт‑Петербурге - Официальный сайт Администрации Санкт‑Петербурга.txt  Управление информации - пресс-служба Администрации Губернатора Санкт‑Петербурга - Официальный сайт Администрации Санкт‑Петербурга.txt  Электронная рассылка - Официальный сайт Администрации Санкт‑Петербурга.txt
knowledge_base/: https___gu_spb_ru_knowledge_base_apostil_dokumentov_.txt  https___gu_spb_ru_knowledge_base_besplatnoe_zuboprotezirovanie_.txt  https___gu_spb_ru_knowledge_base_deklarirovanie_dokhodov_fizicheskikh_lits_3_ndfl_.txt  https___gu_spb_ru_knowledge_base_dispanserizatsiya_.txt  https___gu_spb_ru_knowledge_base_dokumenty_na_obekty_kulturnogo_naslediya__.txt  https___gu_spb_ru_knowledge_base_edinaya_sistema_stroitelnogo_komplexa_.txt  (+116 more)
(+95 files in other folders)
