[tool.poetry]
name = "qwerty-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain-text-splitters = "^0.3.2"
langchain-community = "^0.3.8"
langchain-core = "^0.3.21"
langchain-openai = "^0.2.10"
langchain-chroma = "^0.1.4"
langgraph = "^0.2.53"
langchain-ollama = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.1"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint]
select = ["A", "E", "F", "I", "PL", "RUF", "SIM", "UP", "W"]
ignore = ["PLR0913"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
